--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,5 @@
 _repo: Stories-By-English-Authors--France--Selected-by-Scribners-_2359
-_version: 0.1.0
+_version: 0.2.0
 contributor:
   contributors:
   - agent_name: Stevenson, Robert Louis
@@ -44,7 +44,12 @@ contributor:
     gutenberg_agent_id: '2440'
     url: http://www.gutenberg.org/2009/agents/2440
     wikipedia: http://en.wikipedia.org/wiki/Hesba_Stretton
+covers:
+- cover_type: generated
+  image_path: cover.png
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/2359#Stories-By-English-Authors--France--Selected-by-Scribners-
 gutenberg_bookshelf: Short Stories
 gutenberg_issued: '2006-03-26'
 gutenberg_type: Text
